<resources>
    <string name="app_name">MySystem</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="account_text">账&#160;号：</string>
    <string name="password_text">密&#160;码：</string>
    <string name="code_text">验证码：</string>
    <!--    <string name="changeCode"><u>看不清？<br/>点击换一张</u></string>-->
    <string name="signIn_btn">登录</string>
    <string name="signUp_text">还没有账号？点击注册</string>
    <string name="agreement">已阅读并同意</string>
    <string name="yonghuxieyi"><a style='text-decoration:none; color:#0000FF' href='https://www.baidu.com'>《用户服务协议》</a></string>
    <string name="he">和</string>
    <string name="yinsizhengce"><a style='text-decoration:none; color:#0000FF' href='https://www.baidu.com'>《隐私政策》</a></string>
    <string name="title">捷职招聘</string>
    <string name="applicant">我要找工作</string>
    <string name="hr">我要招人</string>
    <string name="rememberPwd">记住密码</string>
    <string name="forgotPwd">找回密码</string>
    <string name="register_title">注册</string>
    <string name="confirm_pwd_input">请确认密码</string>
    <string name="pwd_input">请输入密码</string>
    <string name="account_input">请输入账号</string>
    <string name="radio_applicant">求职者</string>
    <string name="radio_hr">HR</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quznhi">全职</string>
    <string name="shixi">实习</string>
    <string name="search_content">搜索职位/公司</string>
    <string name="gangweizhize">
        岗位职责：<br />
        1、<br />
        2、<br />
        3、<br />
        4、<br />
        5、
    </string>
</resources>