<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="40sp"
        android:textColor="#417BDF"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_applicant"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/applicant"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/applicant_line"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="@drawable/line_round"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp">
            <TextView
                android:id="@+id/tv_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/hr_line"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="@drawable/line_round"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/account_text" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="200dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/account_hint"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/et_password"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_text"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_input_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/code_hint"
            android:inputType="text"/>

        <ImageView
            android:id="@+id/img_code"
            android:layout_width="300px"
            android:layout_height="120px"
            android:background="@color/purple_200" />

<!--        <TextView-->
<!--            android:id="@+id/tv_changeCode"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/changeCode"-->
<!--            android:textSize="10sp"-->
<!--            android:textStyle="italic"-->
<!--            tools:ignore="SmallSp" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_remPwd"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/rememberPwd" />

        <TextView
            android:id="@+id/tv_forgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPwd"
            android:layout_marginLeft="150dp"
            android:textColor="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/signIn_btn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_agreement"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_link_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yonghuxieyi"
                android:textColor="@color/link_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_link_yinsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yinsizhengce"
                android:textColor="@color/link_blue" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_text" />

    </LinearLayout>

</LinearLayout>