<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomePage"
    android:background="@color/bg_homepage">

    <RelativeLayout
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/view_quanzhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_quanzhi"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/quznhi"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/line_quanzhi"
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/line_round" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_shixi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/view_quanzhi"
            android:layout_marginStart="15dp">
            <TextView
                android:id="@+id/tv_shixi"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/shixi"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/line_shixi"
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/line_round"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/view_quanzhi"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/view_shixi"
            android:background="@drawable/shape_search">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/search_icon" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_search"
                android:hint="@string/search_content"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_tuijian"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/shape_round_grey"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/shape_round">

            <TextView
                android:id="@+id/mingqi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="毕业季·名企 800+"
                android:textColor="@color/link_blue"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/mingqi_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/mingqi_title"
                android:layout_alignStart="@+id/mingqi_title"
                android:layout_marginTop="10dp"
                android:background="@drawable/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/mingqi_icon"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mingqi_icon"
                android:text="路尚集团436个在招职位"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_round"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/search_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="“三好“学生春招专场"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:textSize="13sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_round"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/search_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="热门春招岗位精选"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:textSize="13sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tuijian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="推荐"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_golang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_tuijian"
            android:text="Golang"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_golang"
            android:text="Android"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/tv_android"
            android:text="C"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_city"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="校园好职位等你来投"
            android:textSize="13sp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="城市"
            android:textSize="13sp"
            android:layout_toStartOf="@+id/xiala"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:id="@+id/xiala"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/search_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/lt_lt_grey">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_caidanlan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/link_blue"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>